Move advances for control character in Indic syllable shaping

When handling control characters (ZWJ, ZWNJ) in Indic syllables,
we only moved glyphs and attributes of the item, advances should
also be moved forward, otherwise we will use the advance of ZWJ/
ZWNJ for the part of syllable, which is normally zero, it results
some positioning problems.

Task-number: QTBUG-14204
Reviewed-by: Lars Knoll